kube/services/netpolicy/networkpolicy_guppy_templ.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-guppy
spec:
  podSelector:
    matchLabels:
      app: guppy
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: guppy
      - podSelector:
          matchLabels:
             app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: guppy
      - podSelector:
          matchLabels:
            app: arborist
      - podSelector:
          matchLabels:
            app: esproxy
  policyTypes:
   - Ingress
   - Egress
